samples/_failures_safe/1761150845_972458_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1eadfcf4.c: In function ‘main’:
./samples/SAFE/__tmp_1eadfcf4.c:153:17: error: expected declaration or statement at end of input
  153 |                 from[strcspn(from, "\n")] = '\0';
      |                 ^~~~
./samples/SAFE/__tmp_1eadfcf4.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1eadfcf4.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1eadfcf4.c:153:17: error: expected declaration or statement at end of input
